--- a/flaskr/static/style.css
+++ b/flaskr/static/style.css
@@ -1,26 +1,112 @@
-html { font-family: sans-serif; background: #eee; padding: 1rem; }
-body { max-width: 960px; margin: 0 auto; background: white; }
-h1 { font-family: serif; color: #377ba8; margin: 1rem 0; }
-a { color: #377ba8; }
-hr { border: none; border-top: 1px solid lightgray; }
-nav { background: lightgray; display: flex; align-items: center; padding: 0 0.5rem; }
-nav h1 { flex: auto; margin: 0; }
-nav h1 a { text-decoration: none; padding: 0.25rem 0.5rem; }
-nav ul  { display: flex; list-style: none; margin: 0; padding: 0; }
-nav ul li a, nav ul li span, header .action { display: block; padding: 0.5rem; }
-.content { padding: 0 1rem 1rem; }
-.content > header { border-bottom: 1px solid lightgray; display: flex; align-items: flex-end; }
-.content > header h1 { flex: auto; margin: 1rem 0 0.25rem 0; }
-.flash { margin: 1em 0; padding: 1em; background: #cae6f6; border: 1px solid #377ba8; }
-.post > header { display: flex; align-items: flex-end; font-size: 0.85em; }
-.post > header > div:first-of-type { flex: auto; }
-.post > header h1 { font-size: 1.5em; margin-bottom: 0; }
-.post .about { color: slategray; font-style: italic; }
-.post .body { white-space: pre-line; }
-.content:last-child { margin-bottom: 0; }
-.content form { margin: 1em 0; display: flex; flex-direction: column; }
-.content label { font-weight: bold; margin-bottom: 0.5em; }
-.content input, .content textarea { margin-bottom: 1em; }
-.content textarea { min-height: 12em; resize: vertical; }
-input.danger { color: #cc2f2e; }
-input[type=submit] { align-self: start; min-width: 10em; }
+body {
+    margin: 0;
+}
+.abtn {
+    display: inline-block;
+    font-weight: 600;
+    line-height: 1.5;
+    color: #212529;
+    text-align: center;
+    text-decoration: none;
+    vertical-align: middle;
+    cursor: pointer;
+    -webkit-user-select: none;
+    -moz-user-select: none;
+    user-select: none;
+    background-color: transparent;
+    border: 1px solid transparent;
+    padding: 0.375rem 0.75rem;
+    font-size: 1rem;
+    border-radius: 0.25rem;
+    transition: color .15s ease-in-out,background-color .15s ease-in-out,border-color .15s ease-in-out,box-shadow .15s ease-in-out;
+ }
+.primary {
+    color: #fff;
+    background-color: #0d6efd;
+    border-color: #0d6efd;
+ }
+.container {
+    width: 100%;
+    margin-right: auto;
+    margin-left: auto;
+}
+@media (min-width: 1200px){
+    .container {
+        max-width: 1150px;
+    }
+}
+@media (max-width: 400px){
+    .container {
+        max-width: 230px;
+    }
+}
+.grid {
+    display: grid;
+}
+.gap-2{
+    column-gap: 1rem;
+}
+.columns-4to1 {
+    grid-template-columns: repeat(4, 1fr);
+}
+@media (max-width: 400px){
+    .columns-4to1 {
+        grid-template-columns: 1fr;
+    }
+}
+.flex {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+}
+.flex-row {
+     flex-direction: row;
+}
+.flex-column {
+    flex-direction: column;
+}
+.items-center{
+     align-items: center;
+}
+.justify-center{
+    justify-content: center;
+}
+.text {
+    margin-top: 0;
+    margin-bottom: 0;
+}
+.navlinks a {
+    text-decoration: none;
+    color: darkgray;
+    padding: 0.5rem;
+}
+.spacex-2 a, h3{
+    margin-left: 0.66rem;
+    margin-right: 0.66remem  ;
+}
+.bordered {
+    border-bottom: 1px solid darkgray;
+}
+.card{
+    border: 1px solid darkgray;
+    border-radius: 10px;
+}
+.svg {
+    height: 170px;
+}
+.bg-gray{
+    background-color: lightgray;
+    width: 100%;
+}
+.mt-1{
+    margin-top: 1rem;
+}
+.my-1{
+    margin-top: 1rem;
+    margin-bottom: 1rem;
+}
+.p-1{
+    padding: 0.33rem;
+}
+
+
