--- a/flaskr/templates/base.html
+++ b/flaskr/templates/base.html
@@ -1,37 +1,49 @@
-<!DOCTYPE html>
+<!doctype html>
 <head>
-  <title>{% block title %}{% endblock %} - Flaskr</title>
+    <title>{% block title %}{% endblock %} - Flaskr</title>
+    <link
+        rel="stylesheet"
+        href="https://cdnjs.cloudflare.com/ajax/libs/bulma/0.9.4/css/bulma.min.css"
+        integrity="sha512-HqxHUkJM0SYcbvxUw5P60SzdOTy/QVwA1JJrvaXJv4q7lmbDZCmZaqz01UPOaQveoxfYRv1tHozWGPMcuTBuvQ=="
+        crossorigin="anonymous"
+        referrerpolicy="no-referrer"
+    />
+    <link
+        rel="stylesheet"
+        href="{{ url_for('static', filename='style.css') }}"
+    />
 </head>
 <body>
-  <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}" />
-  <nav class="bordered">
-    <div class="flex flex-row items-center navlinks spacex-2">
-      <h3 class="text">LoveRandomizer</h3>
-      <a href="{{ url_for('home.index') }}">Home</a>
-      <a href="{{ url_for('roll.index') }}">Roll</a>
-      <a href="{{ url_for('blog.index') }}">Develop</a>
-    </div>
-    <ul>
-      {% if g.user %}
-      <li><span>{{ g.user['username'] }}</span></li>
-      <li><a href="{{ url_for('auth.logout') }}">Log Out</a> {% else %}</li>
+    <nav class="bordered">
+        <div class="navlinks spacex-2 flex flex-row items-center">
+            <h3 class="text">LoveRandomizer</h3>
+            <a href="{{ url_for('home.index') }}">Home</a>
+            <a href="{{ url_for('roll.index') }}">Roll</a>
+            <a href="{{ url_for('blog.index') }}">Develop</a>
+        </div>
+        <ul>
+            {% if g.user %}
+            <li><span>{{ g.user['username'] }}</span></li>
+            <li>
+                <a href="{{ url_for('auth.logout') }}">Log Out</a> {% else %}
+            </li>
 
-      <li><a href="{{ url_for('auth.register') }}">Register</a></li>
-      <li>
-        <a href="{{ url_for('auth.login') }}">Log In</a>
-        {% endif %}
-      </li>
-    </ul>
-  </nav>
-  <section class="content">
-    <header>{% block header %}{% endblock %}</header>
-    {% for message in get_flashed_messages() %}
-    <div class="flash">{{ message }}</div>
-    {% endfor %}
-    <main class="container mt-1">{% block content %}{% endblock %}</main>
-  </section>
-  <script src="https://unpkg.com/lucide@latest"></script>
-  <script>
-    lucide.createIcons();
-  </script>
+            <li><a href="{{ url_for('auth.register') }}">Register</a></li>
+            <li>
+                <a href="{{ url_for('auth.login') }}">Log In</a>
+            </li>
+            {% endif %}
+        </ul>
+    </nav>
+    <section class="content">
+        <header>{% block header %}{% endblock %}</header>
+        {% for message in get_flashed_messages() %}
+        <div class="flash">{{ message }}</div>
+        {% endfor %}
+        <main class="container mt-1">{% block content %}{% endblock %}</main>
+    </section>
+    <script src="https://unpkg.com/lucide@latest"></script>
+    <script>
+        lucide.createIcons();
+    </script>
 </body>
