--- a/flaskr/templates/blog/update.html
+++ b/flaskr/templates/blog/update.html
@@ -1,28 +1,28 @@
 {% extends 'base.html' %} {% block header %}
-<h1 class="container">
+<h1 class="container title mt-2">
   {% block title %}Edit "{{ act['name'] }}"{% endblock %}
 </h1>
 {% endblock %} {% block content %}
 <section>
   <form method="post" class="width-50">
-    <label for="title">Title</label>
+    <label class="label" for="title">Title</label>
     <input
       name="title"
       id="title"
       value="{{ request.form['name'] or act['name'] }}"
       required
-      class="form-control"
+      class="input"
     />
-    <label for="body">Body</label>
-    <textarea name="body" id="body" class="form-control">
+    <label class="label" for="body">Body</label>
+    <textarea name="body" id="body" class="textarea">
 {{ request.form['description'] or act['description'] }}</textarea
     >
-    <input type="submit" value="Save" class="abtn primary my-1" />
+    <input type="submit" value="Save" class="button is-primary my-1" />
     <hr />
   </form>
   <form action="{{ url_for('blog.delete', id=act['id']) }}" method="post">
     <input
-      class="abtn danger"
+      class="button is-danger"
       type="submit"
       value="Delete"
       onclick="return confirm('Are you sure?');"
