--- a/flaskr/templates/base.html
+++ b/flaskr/templates/base.html
@@ -1,49 +1,88 @@
-<!doctype html>
+<!DOCTYPE html>
 <head>
-    <title>{% block title %}{% endblock %} - Flaskr</title>
-    <link
-        rel="stylesheet"
-        href="https://cdnjs.cloudflare.com/ajax/libs/bulma/0.9.4/css/bulma.min.css"
-        integrity="sha512-HqxHUkJM0SYcbvxUw5P60SzdOTy/QVwA1JJrvaXJv4q7lmbDZCmZaqz01UPOaQveoxfYRv1tHozWGPMcuTBuvQ=="
-        crossorigin="anonymous"
-        referrerpolicy="no-referrer"
-    />
-    <link
-        rel="stylesheet"
-        href="{{ url_for('static', filename='style.css') }}"
-    />
+  <title>{% block title %}{% endblock %} - Flaskr</title>
+  <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}" />
 </head>
 <body>
-    <nav class="bordered">
-        <div class="navlinks spacex-2 flex flex-row items-center">
-            <h3 class="text">LoveRandomizer</h3>
-            <a href="{{ url_for('home.index') }}">Home</a>
-            <a href="{{ url_for('roll.index') }}">Roll</a>
-            <a href="{{ url_for('blog.index') }}">Develop</a>
-        </div>
-        <ul>
-            {% if g.user %}
-            <li><span>{{ g.user['username'] }}</span></li>
-            <li>
-                <a href="{{ url_for('auth.logout') }}">Log Out</a> {% else %}
-            </li>
+  <nav class="navbar" role="navigation" aria-label="main navigation">
+    <div class="navbar-brand">
+      <a class="navbar-item" href="/">
+        <img src="{{ url_for('static', filename='logo.png') }}" />
+      </a>
 
-            <li><a href="{{ url_for('auth.register') }}">Register</a></li>
-            <li>
-                <a href="{{ url_for('auth.login') }}">Log In</a>
-            </li>
-            {% endif %}
-        </ul>
-    </nav>
-    <section class="content">
-        <header>{% block header %}{% endblock %}</header>
-        {% for message in get_flashed_messages() %}
-        <div class="flash">{{ message }}</div>
-        {% endfor %}
-        <main class="container mt-1">{% block content %}{% endblock %}</main>
-    </section>
-    <script src="https://unpkg.com/lucide@latest"></script>
-    <script>
-        lucide.createIcons();
-    </script>
+      <a
+        role="button"
+        class="navbar-burger"
+        aria-label="menu"
+        aria-expanded="false"
+        data-target="navbarBasicExample"
+      >
+        <span aria-hidden="true"></span>
+        <span aria-hidden="true"></span>
+        <span aria-hidden="true"></span>
+      </a>
+    </div>
+
+    <div id="navbarBasicExample" class="navbar-menu">
+      <div class="navbar-start">
+        <a class="navbar-item" href="{{ url_for('roll.index') }}"> Roll </a>
+        <a class="navbar-item" href="{{ url_for('blog.index') }}"> Develop </a>
+      </div>
+
+      <div class="navbar-end">
+        {% if g.user %}
+        <div class="navbar-item">
+          <span class="tag is-medium mx-2">{{ g.user['username']}}</span>
+          <a class="button is-primary" href="{{ url_for('auth.logout') }}">
+            Log out
+          </a>
+        </div>
+        {% else %}
+        <div class="navbar-item">
+          <div class="buttons">
+            <a class="button is-primary" href="{{ url_for('auth.register') }}">
+              <strong>Sign up</strong>
+            </a>
+            <a class="button is-light" href="{{ url_for('auth.login') }}">
+              Log in
+            </a>
+          </div>
+        </div>
+        {% endif %}
+      </div>
+    </div>
+  </nav>
+  <script>
+    document.addEventListener("DOMContentLoaded", () => {
+      // Get all "navbar-burger" elements
+      const $navbarBurgers = Array.prototype.slice.call(
+        document.querySelectorAll(".navbar-burger"),
+        0
+      );
+
+      // Add a click event on each of them
+      $navbarBurgers.forEach((el) => {
+        el.addEventListener("click", () => {
+          // Get the target from the "data-target" attribute
+          const target = el.dataset.target;
+          const $target = document.getElementById(target);
+
+          // Toggle the "is-active" class on both the "navbar-burger" and the "navbar-menu"
+          el.classList.toggle("is-active");
+          $target.classList.toggle("is-active");
+        });
+      });
+    });
+  </script>
+  <section class="content">
+    <header>{% block header %}{% endblock %}</header>
+    {% for message in get_flashed_messages() %}
+    <div class="flash">{{ message }}</div>
+    {% endfor %}
+    <main class="container mt-1 p-3">{% block content %}{% endblock %}</main>
+  </section>
+  <script src="https://unpkg.com/lucide@latest"></script>
+  <script>
+    lucide.createIcons();
+  </script>
 </body>
