--- a/flaskr/templates/blog/create.html
+++ b/flaskr/templates/blog/create.html
@@ -1,19 +1,27 @@
 {% extends 'base.html' %} {% block header %}
-<h1>{% block title %}New Post{% endblock %}</h1>
+<h1 class="container title mt-2">{% block title %}New Post{% endblock %}</h1>
 {% endblock %} {% block content %}
-<form class="width-50" method="post">
-  <label for="title">Name</label>
-  <input class="form-control" name="name" id="title" value="{{ request.form['name'] }}" required />
-  <label for="body">Description</label>
-  <textarea class="form-control" name="description" id="body">
+<form method="post">
+  <label class="label" for="name">Name</label>
+  <input
+    class="input"
+    name="name"
+    id="title"
+    value="{{ request.form['name'] }}"
+    required
+  />
+  <label class="label" for="body">Description</label>
+  <textarea class="textarea" name="description" id="body">
 {{ request.form['description'] }}
   </textarea>
-  <select class="form-select my-1" name="category">
-    <option value="shows">Shows</option>
-    <option value="dinners">Dinners</option>
-    <option value="misc">Activities Misc</option>
-    <option value="sexy">Sexy time</option>
-  </select>
-  <input class="abtn primary my-1" type="submit" value="Save" />
+  <div class="select m-2">
+    <select name="category">
+      <option value="shows">Shows</option>
+      <option value="dinners">Dinners</option>
+      <option value="misc">Activities Misc</option>
+      <option value="sexy">Sexy time</option>
+    </select>
+  </div>
+  <input class="button is-primary my-2" type="submit" value="Save" />
 </form>
 {% endblock %}
