--- a/flaskr/templates/home/index.html
+++ b/flaskr/templates/home/index.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %} {% block header %}
-<h1>{% block title %}Homepage{% endblock %}</h1>
+<h1 class="container title mt-2">{% block title %}Homepage{% endblock %}</h1>
 {% endblock %} {% block content %}
-<section>
+<section class="container">
   <h1>Welcome to love randomizer</h1>
   <p>Here you can decide what do to this night with minimal effort</p>
 </section>
