Styling in mobile

--- a/flaskr/templates/blog/index.html
+++ b/flaskr/templates/blog/index.html
@@ -13,7 +13,7 @@
   <div class="columns">
     {% for column in columns %}
     <div class="column">
-      <h3>{{column['hdr']}}</h3>
+      <h3 class="title is-5">{{column['hdr']}}</h3>
       <ul>
         {% for act in column['list'] %}
         <li>
