--- a/flaskr/templates/roll/index.html
+++ b/flaskr/templates/roll/index.html
@@ -17,7 +17,7 @@
     });
   }
 </script>
-<section class="columns my-3">
+<section class="columns my-3 p-3">
   {% for act in acts %}
   <div class="column">
     <h2 class="title is-4">{{act['hdr']}}</h2>
