--- a/flaskr/templates/base.html
+++ b/flaskr/templates/base.html
@@ -2,6 +2,8 @@
 <head>
   <title>{% block title %}{% endblock %} - Flaskr</title>
   <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}" />
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 </head>
 <body>
   <nav class="navbar" role="navigation" aria-label="main navigation">
